MOBI-283 pagePanel fixed positioning unreliable - set !important on overflow auto to avoid jqm conflict
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@39973 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/resources/themes/base/1_content-pane.css
+++ b/resources/themes/base/1_content-pane.css
@@ -32,7 +32,8 @@
     opacity: 1;
     visibility: visible;
     display:block;
-    overflow: auto;
+    overflow: auto !important;
+    -webkit-overflow-scrolling: touch;
 }
 /* hidden single view */
 .mobi-contentStack-container.single > .mobi-contentStack-panes > .mobi-contentpane-hidden,
